k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdicidr-service
spec:
  type: ClusterIP
  selector:
    app: rdicidr-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
